@@ -112,7 +112,7 @@ def chat_client(
     imei = imei.encode()
 
     gprs_list, before, after = parse_data_payload(
-        b'$$N196,864507032323403,AAA,136,-33.815828,151.200083,180502070902,A,10,10,0,31,1.0,61,8924,682111,505|3|00FA|04E381F2,0000,0000|0000|0000|0198|0003,182713,,108,0000,,3,0,,0|0000|0000|0000|0000|0000*07\r\n',
+        b'$$N196,864507032323403,AAA,136,-33.815828,151.200083,180602070902,A,10,10,0,31,1.0,61,8924,682111,505|3|00FA|04E381F2,0003,0000|0000|0000|0198|0003,182713,,108,0000,,3,0,,0|0000|0000|0000|0000|0000*07\r\n',
         DIRECTION_CLIENT_TO_SERVER
     )
     if len(gprs_list) != 1:
@@ -123,7 +123,7 @@ def chat_client(
     start_long = START_LONG
     login_gprs = gprs_list[0]
     login_gprs.imei = imei
-    enclosed_data = b"AAA,136,%b,%b,180502070902,A,10,10,0,31,1.0,61,8924,682111,505|3|00FA|04E381F2,0000,0000|0000|0000|0198|0003,182713,,108,0000,,3,0,,0|0000|0000|0000|0000|0000" % (
+    enclosed_data = b"AAA,136,%b,%b,180602070902,A,10,10,0,31,1.0,61,8924,682111,505|3|00FA|04E381F2,0003,0000|0000|0000|0198|0003,182713,,108,0000,,3,0,,0|0000|0000|0000|0000|0000" % (
         str(devices["BOT1"]["lat"]).encode(),
         str(devices["BOT1"]["long"]).encode()
     )
