@@ -1,49 +1,4 @@
 #!/usr/bin/env python
-# import json
-#
-# import pika
-# import psycopg2
-#
-# connection = pika.BlockingConnection(pika.ConnectionParameters(host='localhost'))
-# channel = connection.channel()
-# sql = """
-#  UPDATE device_device
-#   SET
-#     manufacturer = %s,
-#     model = %s
-#   WHERE imei = %s"""
-#
-# try:
-#     conn = psycopg2.connect("dbname='geotool' user='django' host='localhost' password='tiapw4gd2u'")
-# except:
-#     print("I am unable to connect to the database")
-# cur = conn.cursor()
-#
-#
-# def callback(ch, method, properties, body):
-#     print(" [x] Received %r" % body)
-#     data = json.loads(body.decode())
-#     print("Imei is %s", data["imei"])
-#     # keys = data.keys()
-#     # values = [data[column] for column in data.remove("log_time")]
-#     result = cur.execute(sql, (data["manufacturer"], data["model"], data["imei"]))
-#     print(result)
-#     updated_rows = cur.rowcount
-#     print(updated_rows)
-#     result = conn.commit()
-#     print(result)
-#
-#
-# channel.basic_consume(callback,
-#                       queue='firmware_update',
-#                       no_ack=True)
-#
-# channel.queue_declare(queue='firmware_update')
-#
-# print(' [*] Waiting for messages. To exit press CTRL+C')
-# channel.start_consuming()
-
-
 import asyncio
 import aio_pika
 import json
