@@ -1,7 +1,9 @@
 2.78 (unreleased)
 -----------------
 
-- Nothing changed yet.
+- Change to imei being decoded as a property of the BaseReport so that we don't need to constantly decode it.
+- Add logging to show when a client is found when parsing response messages sent back to simchatserver.
+- Move datetime calculations to utcnow.
 
 
 2.77 (2018-09-01)
